--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
 
         <item name="android:fontFamily">@font/font</item>
-        <item name="txtColor">@color/black200</item>
+        <item name="txtColor">@color/black600</item>
 
         <!--    Button Color    -->
         <item name="android:buttonStyle">@style/btn_fill_style</item>
@@ -42,6 +42,7 @@
         <!--    Header Style    -->
         <item name="hd_backgroundColor">@color/white500</item>
         <item name="hd_main_logo">@drawable/ic_logo_header</item>
+        <item name="hd_txt_color">@color/black500</item>
         <item name="hd_item_color">#B7B7B7</item>
     </style>
 
