--- a/app/src/main/res/layout/fragment_team_building.xml
+++ b/app/src/main/res/layout/fragment_team_building.xml
@@ -12,6 +12,19 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.TeamBuildingFragment">
 
+        <com.heechan.membeder.ui.view.header.NavigationHeader
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:navigationTitle="Hello World"
+            app:navigationMenu1Icon="@drawable/ic_bnv_more"
+            app:navigationMenu2Icon="@drawable/ic_bnv_contest"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
