--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -42,6 +42,7 @@
         <!--    Header Style    -->
         <item name="hd_backgroundColor">@color/black500</item>
         <item name="hd_main_logo">@drawable/ic_logo_header_dark</item>
-        <item name="hd_item_color">@color/white500</item>
+        <item name="hd_txt_color">@color/white600</item>
+        <item name="hd_item_color">@color/white600</item>
     </style>
 </resources>
