--- a/app/src/main/res/layout/view_header_navigation.xml
+++ b/app/src/main/res/layout/view_header_navigation.xml
@@ -38,7 +38,7 @@
 
             android:text="타이틀"
             android:textColor="?attr/hd_txt_color"
-            android:textSize="13sp"
+            android:textSize="15sp"
             android:textFontWeight="600"
 
             app:layout_constraintTop_toTopOf="parent"
@@ -80,6 +80,22 @@
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintHorizontal_chainStyle="packed"
             tools:ignore="UseAppTint" />
+
+        <TextView
+            android:id="@+id/txt_navigationHeader_actionBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="액션버튼"
+            android:textSize="13sp"
+            android:textColor="?attr/hd_txt_color"
+
+            android:visibility="gone"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
