--- a/app/src/main/res/layout/fragment_sign_up_5.xml
+++ b/app/src/main/res/layout/fragment_sign_up_5.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="프로필 입력"
+            android:text="5"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
