--- a/app/src/main/res/layout/fragment_sign_up_6.xml
+++ b/app/src/main/res/layout/fragment_sign_up_6.xml
@@ -7,6 +7,10 @@
         <variable
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
+
+        <variable
+            name="currentPage"
+            type="int" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
