--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
 
         <item name="android:fontFamily">@font/font</item>
         <item name="txtColor">@color/black600</item>
+        <item name="android:textColor">?attr/txtColor</item>
 
         <!--    Button Color    -->
         <item name="android:buttonStyle">@style/btn_fill_style</item>
@@ -40,7 +41,7 @@
         <item name="edt_hintColor">@color/gray300</item>
 
         <!--    Header Style    -->
-        <item name="hd_backgroundColor">@color/white500</item>
+        <item name="hd_backgroundColor">@color/white600</item>
         <item name="hd_main_logo">@drawable/ic_logo_header</item>
         <item name="hd_txt_color">@color/black500</item>
         <item name="hd_item_color">#B7B7B7</item>
@@ -97,6 +98,7 @@
 
     <style name="edt_icon_style" parent="edt_style">
         <item name="android:drawablePadding">8dp</item>
+        <item name="android:drawableTint">@color/gray300</item>
 
         <item name="android:paddingVertical">12dp</item>
         <item name="android:paddingHorizontal">16dp</item>
