--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -1,43 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
 
         <variable
-            name="currentPage"
-            type="int" />
+            name="signUp"
+            type="com.heechan.membeder.model.data.ui.SignUp" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        android:fillViewport="true">
 
-            android:text="이메일 입력"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/line_signUp1_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <Button
-            android:id="@+id/next"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
 
-            android:text="다음"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/line_signUp1_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/app_padding_hr" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.heechan.membeder.ui.view.header.NavigationHeader
+                android:id="@+id/hd_singUp1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="14sp"
+                android:text="반가워요"
+                android:textFontWeight="700"
+
+                android:textSize="22sp"
+
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
+                app:layout_constraintTop_toBottomOf="@id/hd_singUp1"
+                tools:ignore="UnusedAttribute" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="저희 같이 일해볼까요?"
+                android:textColor="?attr/colorPrimary"
+
+                android:textFontWeight="700"
+
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                tools:ignore="UnusedAttribute" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Membeder에 들어가기 전 계정 정보를 입력해주세요."
+
+                android:textColor="@color/gray300"
+
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+            <EditText
+                android:id="@+id/edt_signUp1_email"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="23dp"
+                android:drawableStart="@drawable/ic_email"
+
+                android:hint="이메일을 입력해주세요"
+
+                android:text="@={vm.email}"
+
+                app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+            <EditText
+                android:id="@+id/edt_signUp1_password"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="8dp"
+                android:drawableStart="@drawable/ic_lock"
+
+                android:hint="비밀번호를 입력해주세요"
+
+                android:text="@={vm.password}"
+
+                app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
+                app:layout_constraintTop_toBottomOf="@+id/edt_signUp1_email" />
+
+            <EditText
+                android:id="@+id/edt_signUp1_passwordCheck"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="8dp"
+                android:drawableStart="@drawable/ic_check"
+
+                android:hint="비밀번호를 다시 입력해주세요"
+
+                android:text="@={vm.passwordRe}"
+
+                app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
+                app:layout_constraintTop_toBottomOf="@+id/edt_signUp1_password" />
+
+
+            <Button
+                android:id="@+id/next"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:text="다음"
+
+                android:layout_marginBottom="@dimen/app_padding_hr"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp1_start" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
