--- a/app/src/main/res/layout/fragment_sign_up_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_2.xml
@@ -13,32 +13,145 @@
             type="int" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        android:fillViewport="true">
 
-            android:text="직종 입력"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/line_signUp2_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <Button
-            android:id="@+id/next"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
 
-            android:text="다음"
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/line_signUp2_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/app_padding_hr" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.heechan.membeder.ui.view.header.NavigationHeader
+                android:id="@+id/hd_singUp2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
 
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txt_signup2_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="14sp"
+                android:text="좋아요!✌"
+                android:textFontWeight="700"
+
+                android:textSize="22sp"
+
+                app:layout_constraintStart_toStartOf="@id/line_signUp2_start"
+                app:layout_constraintTop_toBottomOf="@id/hd_singUp2"
+                tools:ignore="UnusedAttribute" />
+
+            <TextView
+                android:id="@+id/txt_signup2_textView2"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="닉네임과 이름을 입력해주세요"
+                android:textColor="?attr/colorPrimary"
+
+                android:textFontWeight="700"
+
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="@id/line_signUp2_start"
+                app:layout_constraintTop_toBottomOf="@+id/txt_signup2_textView"
+                tools:ignore="UnusedAttribute" />
+
+            <TextView
+                android:id="@+id/txt_signup2_textView3"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Membeder에서 불릴 이름이기에 신중히 정해주세요"
+
+                android:textColor="@color/gray300"
+
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="@id/line_signUp2_start"
+                app:layout_constraintTop_toBottomOf="@+id/txt_signup2_textView2" />
+
+            <EditText
+                android:id="@+id/edt_signUp2_name"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="23dp"
+                android:drawableStart="@drawable/ic_badge"
+
+                android:hint="이름을 입력해주세요"
+
+                android:text="@={vm.name}"
+
+                app:layout_constraintEnd_toEndOf="@id/line_signUp2_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp2_start"
+                app:layout_constraintTop_toBottomOf="@+id/txt_signup2_textView3" />
+
+            <EditText
+                android:id="@+id/edt_signUp2_nickname"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="8dp"
+                android:drawableStart="@drawable/ic_person"
+
+                android:hint="닉네임을 입력해주세요"
+
+                android:text="@={vm.nickname}"
+
+                app:layout_constraintEnd_toEndOf="@id/line_signUp2_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp2_start"
+                app:layout_constraintTop_toBottomOf="@+id/edt_signUp2_name" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="직종 입력"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
+            <Button
+                android:id="@+id/next"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:text="다음"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
