--- a/app/src/main/res/layout/fragment_sign_up_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_2.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginTop="14sp"
-                android:text="좋아요!✌"
+                android:text="좋아요!"
                 android:textFontWeight="700"
 
                 android:textSize="22sp"
@@ -127,17 +127,6 @@
                 app:layout_constraintStart_toStartOf="@id/line_signUp2_start"
                 app:layout_constraintTop_toBottomOf="@+id/edt_signUp2_name" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="직종 입력"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                />
-
             <Button
                 android:id="@+id/next"
                 android:layout_width="0dp"
@@ -145,10 +134,11 @@
 
                 android:text="다음"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginBottom="@dimen/app_padding_hr"
+
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintEnd_toEndOf="@id/line_signUp2_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp2_start" />
 
 
 
