--- a/app/src/main/res/layout/fragment_sign_up_4.xml
+++ b/app/src/main/res/layout/fragment_sign_up_4.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
@@ -17,15 +18,89 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/line_signUp4_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="4"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/app_padding_hr" />
 
-            app:layout_constraintTop_toTopOf="parent"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/line_signUp4_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/app_padding_hr" />
+
+        <com.heechan.membeder.ui.view.header.NavigationHeader
+            android:id="@+id/hd_singUp3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_signup4_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="14sp"
+            android:text="프로필을 만들어볼까요?"
+            android:textFontWeight="700"
+
+            android:textSize="22sp"
+
+            app:layout_constraintStart_toStartOf="@id/line_signUp4_start"
+            app:layout_constraintTop_toBottomOf="@id/hd_singUp3"
+            tools:ignore="UnusedAttribute" />
+
+        <TextView
+            android:id="@+id/txt_signup4_textView2"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="상세 직종을 입력해주세요."
+            android:textColor="?attr/colorPrimary"
+
+            android:textFontWeight="700"
+
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="@id/line_signUp4_start"
+            app:layout_constraintTop_toBottomOf="@+id/txt_signup4_textView"
+            tools:ignore="UnusedAttribute" />
+
+        <TextView
+            android:id="@+id/txt_signup4_textView3"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Membeder에서 보일 프로필이기에 사실만 적어주세요."
+
+            android:textColor="@color/gray300"
+
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="@id/line_signUp4_start"
+            app:layout_constraintTop_toBottomOf="@+id/txt_signup4_textView2" />
+
+        <EditText
+            style="@style/edt_icon_style"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:hint="상세직종을 입력해주세요"
+            android:drawableStart="@drawable/ic_link"
+
+            android:layout_marginTop="24dp"
+
+            app:layout_constraintEnd_toEndOf="@id/line_signUp4_end"
+            app:layout_constraintStart_toStartOf="@id/line_signUp4_start"
+            app:layout_constraintTop_toBottomOf="@id/txt_signup4_textView3" />
 
 
         <Button
@@ -33,12 +108,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
+            android:layout_marginBottom="@dimen/app_padding_hr"
+
             android:text="다음"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="@id/line_signUp4_end"
+            app:layout_constraintStart_toStartOf="@id/line_signUp4_start" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
