--- a/app/src/main/res/layout/fragment_sign_up_7.xml
+++ b/app/src/main/res/layout/fragment_sign_up_7.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
@@ -21,7 +22,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:ignore="ScrollViewSize">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/line_signUp7_start"
@@ -97,40 +99,31 @@
                 android:id="@+id/edt_signUp7_name"
                 style="@style/edt_icon_style"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
-
+                android:layout_height="wrap_content"
                 android:layout_marginTop="23dp"
+
+                android:drawableStart="@drawable/ic_link"
 
                 android:hint="자기소개를 적어주세요"
 
-                android:text="@={vm.websiteUrl}"
+                android:text="@={vm.introduceMessage}"
 
                 app:layout_constraintEnd_toEndOf="@id/line_signUp7_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp7_start"
                 app:layout_constraintTop_toBottomOf="@+id/txt_signup7_textView3" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="웹사이트입력"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                />
 
             <Button
                 android:id="@+id/next"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
+                android:layout_marginBottom="@dimen/app_padding_hr"
+
                 android:text="다음"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
-
+                app:layout_constraintEnd_toEndOf="@id/line_signUp7_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp7_start" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
