--- a/app/src/main/res/layout/fragment_sign_up_3.xml
+++ b/app/src/main/res/layout/fragment_sign_up_3.xml
@@ -94,6 +94,21 @@
                 app:layout_constraintStart_toStartOf="@id/line_signUp3_start"
                 app:layout_constraintTop_toBottomOf="@+id/txt_signup3_textView2" />
 
+            <com.heechan.membeder.ui.view.SignUpProgress
+                android:id="@+id/progress_signUp3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="12dp"
+                android:paddingHorizontal="@dimen/app_padding_hr"
+
+                app:signUpProgressIndex="1"
+
+                app:layout_constraintTop_toBottomOf="@id/txt_signup3_textView3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
             <RadioGroup
                 android:id="@+id/rg_signUp3_profession"
                 android:layout_width="0dp"
@@ -105,7 +120,7 @@
 
                 app:layout_constraintEnd_toEndOf="@id/line_signUp3_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp3_start"
-                app:layout_constraintTop_toBottomOf="@id/txt_signup3_textView3">
+                app:layout_constraintTop_toBottomOf="@id/progress_signUp3">
 
                 <RadioButton
                     android:id="@+id/rb_signUp3_developer"
@@ -113,13 +128,14 @@
                     android:layout_height="wrap_content"
 
                     android:button="@drawable/se_radio_btn"
-                    android:checked="false"
+                    android:checked="true"
                     android:paddingVertical="12dp"
                     android:paddingStart="10dp"
 
                     android:text="개발자"
 
                     android:textFontWeight="600"
+
 
                     android:textSize="16sp" />
 
@@ -129,7 +145,6 @@
                     android:layout_height="wrap_content"
 
                     android:button="@drawable/se_radio_btn"
-                    android:checked="false"
                     android:paddingVertical="12dp"
                     android:paddingStart="10dp"
 
@@ -145,7 +160,6 @@
                     android:layout_height="wrap_content"
 
                     android:button="@drawable/se_radio_btn"
-                    android:checked="false"
                     android:paddingVertical="12dp"
                     android:paddingStart="10dp"
 
