--- a/app/src/main/res/layout/fragment_sign_up_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_2.xml
@@ -103,6 +103,7 @@
                 android:drawableStart="@drawable/ic_badge"
 
                 android:hint="이름을 입력해주세요"
+                android:maxLines="1"
 
                 android:text="@={vm.name}"
 
@@ -120,7 +121,7 @@
                 android:drawableStart="@drawable/ic_person"
 
                 android:hint="닉네임을 입력해주세요"
-
+                android:maxLines="1"
                 android:text="@={vm.nickname}"
 
                 app:layout_constraintEnd_toEndOf="@id/line_signUp2_end"
