--- a/app/src/main/res/layout/fragment_sign_up_4.xml
+++ b/app/src/main/res/layout/fragment_sign_up_4.xml
@@ -93,10 +93,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
 
-            android:hint="상세직종을 입력해주세요"
+            android:layout_marginTop="24dp"
             android:drawableStart="@drawable/ic_link"
 
-            android:layout_marginTop="24dp"
+            android:hint="상세직종을 입력해주세요"
+            android:maxLines="1"
+            android:text="@={vm.detailProfession}"
 
             app:layout_constraintEnd_toEndOf="@id/line_signUp4_end"
             app:layout_constraintStart_toStartOf="@id/line_signUp4_start"
