--- a/app/src/main/res/layout/fragment_sign_up_8.xml
+++ b/app/src/main/res/layout/fragment_sign_up_8.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.heechan.membeder.ui.signUp.SignUpViewModel" />
@@ -93,34 +94,51 @@
                 app:layout_constraintStart_toStartOf="@id/line_signUp8_start"
                 app:layout_constraintTop_toBottomOf="@+id/txt_signup8_textView2" />
 
-            <EditText
-                android:id="@+id/edt_signUp2_name"
-                style="@style/edt_icon_style"
+            <com.heechan.membeder.ui.view.SignUpProgress
+                android:id="@+id/progress_signUp8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
+                android:layout_marginTop="12dp"
+                android:paddingHorizontal="@dimen/app_padding_hr"
+
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_signup8_textView3"
+                app:signUpProgressIndex="6" />
+
+            <EditText
+                android:id="@+id/edt_signUp8_name"
+                style="@style/edt_icon_style"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="23dp"
 
                 android:hint="자기소개를 적어주세요"
+                android:lines="4"
+                android:gravity="top"
+
+                android:paddingVertical="16dp"
 
                 android:text="@={vm.introduceMessage}"
 
                 app:layout_constraintEnd_toEndOf="@id/line_signUp8_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp8_start"
-                app:layout_constraintTop_toBottomOf="@+id/txt_signup8_textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/progress_signUp8" />
 
             <Button
                 android:id="@+id/next"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
+                android:layout_marginBottom="@dimen/app_padding_hr"
+
                 android:text="다음"
 
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
-
+                app:layout_constraintEnd_toEndOf="@id/line_signUp8_end"
+                app:layout_constraintStart_toStartOf="@id/line_signUp8_start" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
