--- a/app/src/main/res/layout/fragment_sign_up_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_1.xml
@@ -106,6 +106,7 @@
                 android:hint="이메일을 입력해주세요"
 
                 android:text="@={vm.email}"
+                android:inputType="textEmailAddress"
 
                 app:layout_constraintEnd_toEndOf="@id/line_signUp1_end"
                 app:layout_constraintStart_toStartOf="@id/line_signUp1_start"
