--- a/app/src/main/res/layout/fragment_sign_up_5.xml
+++ b/app/src/main/res/layout/fragment_sign_up_5.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
+    <data
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <variable
             name="vm"
